# drf_homework

./: .env.sample  Dockerfile  README.md  auth_data.json  docker-compose.yaml  pyproject.toml
college/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
college/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_link_to_video_and_more.py  0003_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_subscription_subscription.py  0007_remove_subscription_subscription_and_more.py  0008_alter_subscription_course_alter_subscription_user.py
config/: settings.py  urls.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: fill.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_user_avatar.py  0004_rename_payments_payment_alter_payment_options.py  0005_alter_payment_options.py  0006_alter_user_country_alter_user_first_name_and_more.py  0007_payment_link_to_payment_payment_session_id.py  0008_alter_payment_date_alter_payment_payment.py
